--- a/admin/src/components/TopBar.css
+++ b/admin/src/components/TopBar.css
@@ -42,6 +42,7 @@
   align-items: center;
   gap: 16px;
   flex-shrink: 0;
+  height: 42px;
 }
 
 .topbar-search {
@@ -77,7 +78,7 @@
   box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.9);
   height: 42px;
   box-sizing: border-box;
-  line-height: 42px;
+  line-height: 1;
   margin: 0;
   font-family: inherit;
   display: block;
